fix: color dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
   }
   .dark {
 
-    --background: 0 0% 3.9%;
+    --background: 240, 4%, 11%;
 
     --foreground: 0 0% 98%;
 
